# PyO3_practice

./: .gitignore  Cargo.toml
practice/: Cargo.toml  build.rs  main.py  pyproject.toml
practice/python/practice/: __init__.py
practice/src/: lib.rs
practice_core/: Cargo.toml
practice_core/src/: lib.rs
