[package]
name = "practice"
edition = "2024"

[lib]
name = "_practice"
crate-type = ["cdylib", "rlib"]

[dependencies]
practice-core = { path = "../practice_core" }
pyo3 = { version = "0.28.2", features = ["extension-module"] }
pyo3-stub-gen = "0.19.0"
pythonize = "0.28.0"
serde = { version = "1.0.228", features = ["derive"] }

[[bin]]
name = "stub_gen"
